--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -10,6 +10,9 @@
   <packaging>jar</packaging>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>23</maven.compiler.source>
+    <maven.compiler.target>23</maven.compiler.target>
     <javafx.version>24-ea+5</javafx.version>
     <mainClassName>se.su.inlupp.Gui</mainClassName>
   </properties>
